# ifdyndnsd

./: Cargo.toml  README.md  default.nix  flake.nix  nixos-module.nix  nixos-test.nix
.github/workflows/: build.yml  checks.yml
src/: config.rs  dns.rs  ifaces.rs  lib.rs  main.rs
src/dns/: tsig.rs
