[package]
name = "ifdyndnsd"
description = "Watch netlink for interface address updates to do DynDNS just like nsupdate does"
version = "0.2.0"
authors = ["Astro <astro@spaceboyz.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/astro/ifdyndnsd"
repository = "https://github.com/astro/ifdyndnsd.git"
documentation = "https://docs.rs/ifdyndnsd"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full", "rt"] }
rtnetlink = "0.13"
netlink-packet-route = "0.17"
trust-dns-client = { version = "0.22", features = ["dnssec", "dnssec-ring"] }
once_cell = "1"
hmac = "0.12"
sha2 = "0.10"
serde = "1"
serde_derive = "1"
toml = "0.7"
cidr = "0.2"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
netlink-sys = "0.8.5"
netlink-packet-core = "0.7.0"
