[package]
name = "ifdyndnsd"
description = "Watch netlink for interface address updates to do DynDNS just like nsupdate does"
version = "0.2.0"
authors = ["Astro <astro@spaceboyz.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/astro/ifdyndnsd"
repository = "https://github.com/astro/ifdyndnsd.git"
documentation = "https://docs.rs/ifdyndnsd"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full", "rt"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
hickory-client = { version = "0.24", features = ["dnssec", "dnssec-ring"] }
once_cell = "1"
serde = "1"
serde_derive = "1"
toml = "0.8"
cidr = "0.3"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
netlink-sys = "0.8"
netlink-packet-core = "0.7"
